gsKit ChangeLog:

-> 01/12/05 - Chris Gilbert (Neovanglist)
   * Fixed missing lines of texture bug.
   * Fixed some issues in regards to halfbuffers.

-> 01/12/05 - Chris Gilbert (Neovanglist)
   * Big commit - fixed many bugs!
   * HalfBuffers working now in PAL and NTSC

-> 03/12/04 - linuzappz
   * Fixed FNT format support.
   * FNT files can be loaded in raw format.
   * font demo uses arial.fnt by default, compiled within the elf.

-> 06/29/04 - Chris Gilbert (Neovanglist) 
   * dmaKit officially finished.
   * gsKit has working ZTest.
   * gsKit has working Alpha.
   * All primitives implimented and working.
   * gsKit 0.1 release.

-> 06/15/04 - Chris Gilbert (Neovanglist) 
   * Changed directory layout. (See README)
   * Added dmaKit.

-> 06/15/04 - Chris Gilbert (Neovanglist) 
   * Project framework and build system completed.
   * Created CVS module and commited to PS2Dev CVS.
   * README, STATUS, AUTHORS, ID, and LICENSE files added.
